tests/NormalTests/paczka1/fuzzy1/66878373.err
Error in line 33: UAGf S230 97,0
Error in line 29: zH1iF A938 22,6
